Use enhanced switch statement